crates/nash-codegen/src/build/tests/source/snapshots/nash_codegen__build__tests__source__lists__acceptance_test_1_length.snap
---
source: crates/nash-codegen/src/build/tests/source/lists.rs
description: "module Main exposing (..)\nimport Primitive exposing (..)\nimport Builtin exposing (..)\nimport Eq exposing (..)\nlength xs =\n    case xs of\n        [] -> 0\n        _ :: rest -> addInteger 1 (length rest)\nmain = equalsInteger (length [1, 2, 3]) 3\n"
---
--- unoptimized Core
let fromInt#3 : int -> int = \value#9 : int -> value#9 in
letrec
  length#2 : list 'erased -> int [static []] = \xs#4 : list 'erased -> let match#6 : list 'erased = xs#4 in
  case@List match#6 of
    Nil -> fromInt#3 0
    Cons field#7 field#8 -> let rest#5 : list 'erased = field#8 in
    addInteger (fromInt#3 1) (length#2 rest#5)
in
let main#1 : bool = equalsInteger (length#2 (mkCons (fromInt#3 1) (mkCons (fromInt#3 2) (mkCons (fromInt#3 3) (con (list integer) []))))) (fromInt#3 3) in
main#1
--- unoptimized UPLC
(program 1.1.0
  [(lam fromInt_3
    [(lam length_2
      [(lam main_1 main_1)
        [[(builtin equalsInteger)
          [length_2
            [[(force (builtin mkCons)) [fromInt_3 (con integer 1)]]
              [[(force (builtin mkCons)) [fromInt_3 (con integer 2)]]
                [[(force (builtin mkCons)) [fromInt_3 (con integer 3)]] (con (list integer) [])]]]]]
          [fromInt_3 (con integer 3)]]])
      [(lam self_10 [self_10 self_10])
        (lam self_10
          (lam xs_4
            [(lam match_6
              (case
                match_6
                (lam field_7
                  (lam field_8
                    [(lam rest_5
                      [[(builtin addInteger) [fromInt_3 (con integer 1)]] [[self_10 self_10] rest_5]])
                      field_8]))
                [fromInt_3 (con integer 0)]))
              xs_4]))]])
    (lam value_9 value_9)])
--- optimized Core
letrec
  length#12 : list 'erased -> int [static []] = \xs#13 : list 'erased -> case@List xs#13 of
    Nil -> 0
    Cons field#15 field#16 -> let anf#20 : int = length#12 field#16 in
    addInteger 1 anf#20
in
let anf#27 : int = length#12 (con (list integer) [1, 2, 3]) in
equalsInteger anf#27 3
--- optimized UPLC
(program 1.1.0
  [(lam length_9
    [(lam anf_10 [[(builtin equalsInteger) anf_10] (con integer 3)])
      [length_9 (con (list integer) [1, 2, 3])]])
    [(lam self_3 [self_3 self_3])
      (lam self_4
        (lam xs_5
          (case
            xs_5
            (lam field_6
              (lam field_7
                [(lam anf_8 [[(builtin addInteger) (con integer 1)] anf_8])
                  [[self_4 self_4] field_7]]))
            (con integer 0))))]])
--- result
(con bool True)
--- logs
[]
--- budget
cpu: 2605143, memory: 12903
