crates/nash-codegen/src/build/tests/source/snapshots/nash_codegen__build__tests__source__lists__acceptance_test_2_repeat.snap
---
source: crates/nash-codegen/src/build/tests/source/lists.rs
description: "module Main exposing (..)\nimport Primitive exposing (..)\nimport Builtin exposing (..)\nimport Eq exposing (..)\nrepeat x n =\n    if lessThanEqualsInteger n 0 then []\n    else mkCons x (repeat x (subtractInteger n 1))\nmain = eq (repeat #\"61696b656e\" 2) [#\"61696b656e\", #\"61696b656e\"]\n"
---
--- unoptimized Core
let fromBool#8 : bool -> bool = \value#27 : bool -> value#27 in
let eq#16 : bytes -> bytes -> bool = equalsByteString in
letrec
  eq#2 : list 'erased -> list 'erased -> bool [static []] = \xs#6 : list 'erased ys#7 : list 'erased -> let match#20 : list 'erased = xs#6 in
  case@List match#20 of
    Nil -> let match#9 : list 'erased = ys#7 in
    case@List match#9 of
      Nil -> fromBool#8 true
      Cons field#10 field#11 -> fromBool#8 false
    Cons field#21 field#22 -> let x#12 : 'erased = field#21 in
    let restX#13 : list 'erased = field#22 in
    let match#17 : list 'erased = ys#7 in
    case@List match#17 of
      Nil -> fromBool#8 false
      Cons field#18 field#19 -> let y#14 : 'erased = field#18 in
      let restY#15 : list 'erased = field#19 in
      case@Bool eq#16 x#12 y#14 of
        True -> eq#2 restX#13 restY#15
        False -> false
in
let fromInt#5 : int -> int = \value#26 : int -> value#26 in
letrec
  repeat#3 : bytes -> int -> list bytes [static [0]] = \x#23 : bytes n#24 : int -> case@Bool lessThanEqualsInteger n#24 (fromInt#5 0) of
    True -> (con (list bytestring) [])
    False -> mkCons x#23 (repeat#3 x#23 (subtractInteger n#24 (fromInt#5 1)))
in
let fromBytes#4 : bytes -> bytes = \value#25 : bytes -> value#25 in
let main#1 : bool = eq#2 (repeat#3 (fromBytes#4 (con bytestring #61696b656e)) (fromInt#5 2)) (mkCons (fromBytes#4 (con bytestring #61696b656e)) (mkCons (fromBytes#4 (con bytestring #61696b656e)) (con (list bytestring) []))) in
main#1
--- unoptimized UPLC
(program 1.1.0
  [(lam fromBool_8
    [(lam eq_16
      [(lam eq_2
        [(lam fromInt_5
          [(lam repeat_3
            [(lam fromBytes_4
              [(lam main_1 main_1)
                [[eq_2
                  [[repeat_3 [fromBytes_4 (con bytestring #61696b656e)]]
                    [fromInt_5 (con integer 2)]]]
                  [[(force (builtin mkCons)) [fromBytes_4 (con bytestring #61696b656e)]]
                    [[(force (builtin mkCons)) [fromBytes_4 (con bytestring #61696b656e)]]
                      (con (list bytestring) [])]]]])
              (lam value_25 value_25)])
            (lam x_23
              (lam n_24
                [[(lam self_28 [self_28 self_28])
                  (lam self_28
                    (lam n_24
                      (case
                        [[(builtin lessThanEqualsInteger) n_24] [fromInt_5 (con integer 0)]]
                        [[(force (builtin mkCons)) x_23]
                          [[self_28 self_28]
                            [[(builtin subtractInteger) n_24] [fromInt_5 (con integer 1)]]]]
                        (con (list bytestring) []))))]
                  n_24]))])
          (lam value_26 value_26)])
        [(lam self_29 [self_29 self_29])
          (lam self_29
            (lam xs_6
              (lam ys_7
                [(lam match_20
                  (case
                    match_20
                    (lam field_21
                      (lam field_22
                        [(lam x_12
                          [(lam restX_13
                            [(lam match_17
                              (case
                                match_17
                                (lam field_18
                                  (lam field_19
                                    [(lam y_14
                                      [(lam restY_15
                                        (case
                                          [[eq_16 x_12] y_14]
                                          (con bool False)
                                          [[[self_29 self_29] restX_13] restY_15]))
                                        field_19])
                                      field_18]))
                                [fromBool_8 (con bool False)]))
                              ys_7])
                            field_22])
                          field_21]))
                    [(lam match_9
                      (case
                        match_9
                        (lam field_10 (lam field_11 [fromBool_8 (con bool False)]))
                        [fromBool_8 (con bool True)]))
                      ys_7]))
                  xs_6])))]])
      (builtin equalsByteString)])
    (lam value_27 value_27)])
--- optimized Core
letrec
  eq#31 : list 'erased -> list 'erased -> bool [static []] = \xs#32 : list 'erased ys#33 : list 'erased -> case@List xs#32 of
    Nil -> case@List ys#33 of
      Nil -> true
      Cons field#36 field#37 -> false
    Cons field#38 field#39 -> case@List ys#33 of
      Nil -> false
      Cons field#43 field#44 -> let anf#57 : bool = equalsByteString field#38 field#43 in
      case@Bool anf#57 of
        True -> eq#31 field#39 field#44
        False -> false
in
letrec
  worker#56 : int -> list bytes [static []] = \n#55 : int -> let anf#59 : bool = lessThanEqualsInteger n#55 0 in
  case@Bool anf#59 of
    True -> (con (list bytestring) [])
    False -> let anf#61 : int = subtractInteger n#55 1 in
    let anf#62 : list bytes = worker#56 anf#61 in
    mkCons (con bytestring #61696b656e) anf#62
in
let anf#66 : list bytes = worker#56 2 in
eq#31 anf#66 (con (list bytestring) [#61696b656e, #61696b656e])
--- optimized UPLC
(program 1.1.0
  [(lam builtin_26
    [(lam eq_17
      [(lam worker_24
        [(lam anf_25 [[eq_17 anf_25] (con (list bytestring) [#61696b656e, #61696b656e])])
          [worker_24 (con integer 2)]])
        [(lam self_18 [self_18 self_18])
          (lam self_19
            (lam n_20
              [(lam anf_21
                (case
                  anf_21
                  [(lam anf_22
                    [(lam anf_23 [[builtin_26 (con bytestring #61696b656e)] anf_23])
                      [[self_19 self_19] anf_22]])
                    [[(builtin subtractInteger) n_20] (con integer 1)]]
                  (con (list bytestring) [])))
                [[(builtin lessThanEqualsInteger) n_20] (con integer 0)]]))]])
      [(lam self_6 [self_6 self_6])
        (lam self_7
          (lam xs_8
            (lam ys_9
              (case
                xs_8
                (lam field_12
                  (lam field_13
                    (case
                      ys_9
                      (lam field_14
                        (lam field_15
                          [(lam anf_16
                            (case anf_16 (con bool False) (case (constr 0 self_7 field_13 field_15) self_7)))
                            [[(builtin equalsByteString) field_12] field_14]]))
                      (con bool False))))
                (case ys_9 (lam field_10 (lam field_11 (con bool False))) (con bool True))))))]])
    (force (builtin mkCons))])
--- result
(con bool True)
--- logs
[]
--- budget
cpu: 4346547, memory: 23137
