crates/nash-codegen/src/build/tests/source/snapshots/nash_codegen__build__tests__source__lists__acceptance_test_5_direct_2_heads.snap
---
source: crates/nash-codegen/src/build/tests/source/lists.rs
description: "module Main exposing (..)\nimport Primitive exposing (..)\nimport Builtin exposing (..)\nimport Eq exposing (..)\ntype option 'a = None | Some 'a\nimpl Eq 'a => Eq (option 'a) where\n    eq a b =\n        case (a, b) of\n            (None, None) -> True\n            (Some x, Some y) -> eq x y\n            _ -> False\nmain =\n    let\n        head = \\xs ->\n            case xs of\n                [] -> None\n                [a] -> Some xs\n                a :: b :: rest -> Some [a, b]\n    in\n    eq (head [1, 2, 3]) (Some [1, 2])\n"
---
--- unoptimized Core
let fromBool#20 : bool -> bool = \value#37 : bool -> value#37 in
let eq#47 : int -> int -> bool = equalsInteger in
letrec
  eq#23 : list 'erased -> list 'erased -> bool [static []] = \xs#38 : list 'erased ys#39 : list 'erased -> let match#51 : list 'erased = xs#38 in
  case@List match#51 of
    Nil -> let match#40 : list 'erased = ys#39 in
    case@List match#40 of
      Nil -> fromBool#20 true
      Cons field#41 field#42 -> fromBool#20 false
    Cons field#52 field#53 -> let x#43 : 'erased = field#52 in
    let restX#44 : list 'erased = field#53 in
    let match#48 : list 'erased = ys#39 in
    case@List match#48 of
      Nil -> fromBool#20 false
      Cons field#49 field#50 -> let y#45 : 'erased = field#49 in
      let restY#46 : list 'erased = field#50 in
      case@Bool eq#47 x#43 y#45 of
        True -> eq#23 restX#44 restY#46
        False -> false
in
let eq#2 : Main.option 'erased -> Main.option 'erased -> bool = \a#18 : Main.option 'erased b#19 : Main.option 'erased -> let match#24 : (Main.option 'erased, Main.option 'erased) = constr 0 a#18 b#19 in
let leaf#30 : @delay bool = delay (fromBool#20 false) in
case@Tag match#24 of
  0 field#31 field#32 -> case@Tag field#31 of
    0 -> case@Tag field#32 of
      0 -> fromBool#20 true
      1 field#33 -> force leaf#30
    1 field#34 -> case@Tag field#32 of
      0 -> force leaf#30
      1 field#35 -> let x#21 : 'erased = field#34 in
      let y#22 : 'erased = field#35 in
      eq#23 x#21 y#22 in
let fromInt#4 : int -> int = \value#36 : int -> value#36 in
let head#3 : list int -> Main.option (list int) = \xs#6 : list int -> let match#13 : list int = xs#6 in
case@List match#13 of
  Nil -> constr 0
  Cons field#14 field#15 -> case@List field#15 of
    Nil -> let a#7 : int = field#14 in
    (\field#8 : list int -> constr 1 field#8) xs#6
    Cons field#16 field#17 -> let a#9 : int = field#14 in
    let b#10 : int = field#16 in
    let rest#11 : list int = field#17 in
    (\field#12 : list int -> constr 1 field#12) (mkCons a#9 (mkCons b#10 (con (list integer) []))) in
let main#1 : bool = eq#2 (head#3 (mkCons (fromInt#4 1) (mkCons (fromInt#4 2) (mkCons (fromInt#4 3) (con (list integer) []))))) ((\field#5 : list int -> constr 1 field#5) (mkCons (fromInt#4 1) (mkCons (fromInt#4 2) (con (list integer) [])))) in
main#1
--- unoptimized UPLC
(program 1.1.0
  [(lam fromBool_20
    [(lam eq_47
      [(lam eq_23
        [(lam eq_2
          [(lam fromInt_4
            [(lam head_3
              [(lam main_1 main_1)
                [[eq_2
                  [head_3
                    [[(force (builtin mkCons)) [fromInt_4 (con integer 1)]]
                      [[(force (builtin mkCons)) [fromInt_4 (con integer 2)]]
                        [[(force (builtin mkCons)) [fromInt_4 (con integer 3)]] (con (list integer) [])]]]]]
                  [(lam field_5 (constr 1 field_5))
                    [[(force (builtin mkCons)) [fromInt_4 (con integer 1)]]
                      [[(force (builtin mkCons)) [fromInt_4 (con integer 2)]] (con (list integer) [])]]]]])
              (lam xs_6
                [(lam match_13
                  (case
                    match_13
                    (lam field_14
                      (lam field_15
                        (case
                          field_15
                          (lam field_16
                            (lam field_17
                              [(lam a_9
                                [(lam b_10
                                  [(lam rest_11
                                    [(lam field_12 (constr 1 field_12))
                                      [[(force (builtin mkCons)) a_9]
                                        [[(force (builtin mkCons)) b_10] (con (list integer) [])]]])
                                    field_17])
                                  field_16])
                                field_14]))
                          [(lam a_7 [(lam field_8 (constr 1 field_8)) xs_6]) field_14])))
                    (constr 0)))
                  xs_6])])
            (lam value_36 value_36)])
          (lam a_18
            (lam b_19
              [(lam match_24
                [(lam leaf_30
                  (case
                    match_24
                    (lam field_31
                      (lam field_32
                        (case
                          field_31
                          (case field_32 [fromBool_20 (con bool True)] (lam field_33 (force leaf_30)))
                          (lam field_34
                            (case
                              field_32
                              (force leaf_30)
                              (lam field_35 [(lam x_21 [(lam y_22 [[eq_23 x_21] y_22]) field_35]) field_34]))))))))
                  (delay [fromBool_20 (con bool False)])])
                (constr 0 a_18 b_19)]))])
        [(lam self_25 [self_25 self_25])
          (lam self_25
            (lam xs_38
              (lam ys_39
                [(lam match_51
                  (case
                    match_51
                    (lam field_52
                      (lam field_53
                        [(lam x_43
                          [(lam restX_44
                            [(lam match_48
                              (case
                                match_48
                                (lam field_49
                                  (lam field_50
                                    [(lam y_45
                                      [(lam restY_46
                                        (case
                                          [[eq_47 x_43] y_45]
                                          (con bool False)
                                          [[[self_25 self_25] restX_44] restY_46]))
                                        field_50])
                                      field_49]))
                                [fromBool_20 (con bool False)]))
                              ys_39])
                            field_53])
                          field_52]))
                    [(lam match_40
                      (case
                        match_40
                        (lam field_41 (lam field_42 [fromBool_20 (con bool False)]))
                        [fromBool_20 (con bool True)]))
                      ys_39]))
                  xs_38])))]])
      (builtin equalsInteger)])
    (lam value_37 value_37)])
--- optimized Core
letrec
  eq#28 : list 'erased -> list 'erased -> bool [static []] = \xs#29 : list 'erased ys#54 : list 'erased -> case@List xs#29 of
    Nil -> case@List ys#54 of
      Nil -> true
      Cons field#57 field#58 -> false
    Cons field#59 field#60 -> case@List ys#54 of
      Nil -> false
      Cons field#64 field#65 -> let anf#97 : bool = equalsInteger field#59 field#64 in
      case@Bool anf#97 of
        True -> eq#28 field#60 field#65
        False -> false
in
let anf#103 : list int = mkCons 3 (con (list integer) []) in
let anf#104 : list int = mkCons 2 anf#103 in
let anf#105 : list int = mkCons 1 anf#104 in
let anf#98 : list int = mkCons 2 (con (list integer) []) in
let anf#99 : list int = mkCons 1 anf#98 in
let anf#110 : list int = mkCons 2 (con (list integer) []) in
let anf#111 : list int = mkCons 1 anf#110 in
eq#28 anf#99 anf#111
--- optimized UPLC
(program 1.1.0
  [(lam builtin_23
    [(lam partial_24
      [(lam partial_25
        [(lam eq_15
          [(lam anf_16
            [(lam anf_17
              [(lam anf_18
                [(lam anf_19
                  [(lam anf_20
                    [(lam anf_21 [(lam anf_22 [[eq_15 anf_20] anf_22]) [partial_24 anf_21]])
                      [partial_25 (con (list integer) [])]])
                    [partial_24 anf_19]])
                  [partial_25 (con (list integer) [])]])
                [partial_24 anf_17]])
              [partial_25 anf_16]])
            [[builtin_23 (con integer 3)] (con (list integer) [])]])
          [(lam self_4 [self_4 self_4])
            (lam self_5
              (lam xs_6
                (lam ys_7
                  (case
                    xs_6
                    (lam field_10
                      (lam field_11
                        (case
                          ys_7
                          (lam field_12
                            (lam field_13
                              [(lam anf_14
                                (case anf_14 (con bool False) [[[self_5 self_5] field_11] field_13]))
                                [[(builtin equalsInteger) field_10] field_12]]))
                          (con bool False))))
                    (case ys_7 (lam field_8 (lam field_9 (con bool False))) (con bool True))))))]])
        [builtin_23 (con integer 2)]])
      [builtin_23 (con integer 1)]])
    (force (builtin mkCons))])
--- result
(con bool True)
--- logs
[]
--- budget
cpu: 4451300, memory: 24326
